--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#sidebar .current {
+  background-color: azure;
+}
+
 .task.container {
   display: flex;
   align-items: center;
