--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,175 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
+:root {
+  --white-slate: #f8fafc;
+  --lighter-slate: #e2e8f0;
+  --light-slate: #94a3b8;
+  --slate: #64748b;
+  --dark-slate: #475569;
+  --darker-slate: #1e293b;
+  --black-slate: #020617;
+  --green: #4ade80;
 }
 
-#sidebar .current {
-  background-color: azure;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  display: grid;
+  grid-template-columns: 180px 1fr;
+  grid-template-rows: auto 1fr;
+  min-height: 100vh;
+}
+
+button {
+  background-color: white;
+}
+
+button:hover {
+  background-color: var(--lighter-slate);
+  cursor: pointer;
+}
+
+a:hover {
+  cursor: pointer;
+  font-weight: bold;
+}
+
+header {
+  grid-column: 1 / 3;
+  background-color: var(--black-slate);
+  color: var(--white-slate);
+  padding: 0px 24px;
+}
+
+#sidebar {
+  font-size: 1.1rem;
+  background-color: var(--white-slate);
+  padding: 16px 8px;
+  display: flex;
+  flex-direction: column;
+  border-right: 3px solid var(--lighter-slate);
+}
+
+#sidebar button {
+  text-align: left;
+  padding: 8px;
+  border-radius: 8px;
+}
+
+#sidebar #projects {
+  display: flex;
+  flex-direction: column;
+}
+
+#sidebar #projects .container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+#sidebar #projects .container button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#sidebar #add-project {
+  margin-top: 16px;
+}
+
+#content {
+  padding: 8px 24px;
+}
+
+#content .content.header {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+}
+
+#content .content.header button {
+  grid-area: 1 / 2 / 2 / 3;
+  padding: 8px 16px;
+  border-radius: 8px;
+}
+
+#content #tasks-container {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .task.container {
   display: flex;
   align-items: center;
   gap: 16px;
+
+  background-color: var(--white-slate);
+  padding: 0px 16px;
+  border: 3px solid var(--lighter-slate);
+  border-radius: 8px;
 }
 
 .task.container .title {
   flex: 1;
+}
+
+.task.container .complete {
+  padding: 3px;
+  border-radius: 16px;
+}
+
+.task.container .details {
+  border-radius: 8px;
+}
+
+.task.container.completed {
+  text-decoration: line-through;
+}
+
+.task.container.completed * {
+  opacity: 0.5;
+}
+
+dialog {
+  border-radius: 8px;
+}
+
+dialog ul {
+  padding-left: 0;
+}
+
+dialog button {
+  padding: 8px 16px;
+  border-radius: 8px;
+}
+
+dialog .details.container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+dialog .details.container li {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+dialog .details.container input,
+dialog .details.container textarea,
+dialog .details.container select {
+  padding: 3px 6px;
+  border-radius: 3px;
+  background-color: white;
+  border: 1px solid var(--dark-slate);
+}
+
+dialog .details.container input:focus,
+dialog .details.container textarea:focus,
+dialog .details.container select:focus {
+  border-color: var(--black-slate);
+}
+
+dialog .buttons {
+  margin-top: 12px;
+  display: flex;
+  justify-content: space-around;
 }
